# coil-launcher

./: .env.example  .gitignore  README.md  build-and-publish.bat  index.html  package.json  pnpm-lock.yaml  signed-build.bat  tsconfig.json  update-version.sh  vite.config.ts
functions/: get-latest-launcher-release.ts
logo/: itch-io-banner.xcf
scripts/: build-and-publish.ts  signed-build.bat  signed-build.sh  update-version.sh  update-version.ts  utils.ts
server/: api-launcher-routes.ts  deno.json  index-routes.ts  launcher-routes.ts  main.ts
src/: App.tsx  ApplicationStore.ts  AuthStore.ts  GameButton.tsx  TitleBar.tsx  color-utils.ts  main.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: GameTitle.tsx  GamesSidebar.tsx  MechanyxButton.tsx  MechanyxCoilLogo.tsx  StandardButton.tsx  TitleBar.tsx
src/pages/: GameInfo.tsx  GamesGrid.tsx  LoginScreen.tsx  SignInScreen.tsx
src/states/: AuthStore.ts  GameStore.ts
