[package]
name = "mechanyx-coil"
version = "2024.1.7-459"
description = "Mechanyx Coil Launcher"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "os-all", "updater", "window-close", "window-show", "window-maximize", "window-unmaximize", "window-start-dragging", "window-hide", "window-unminimize", "window-minimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.22", features = ["stream"] }
futures-util = "0.3.29"
zip = "0.6.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
